feat: Add removeFromCart service
