# backend/src/cart/cart.controller.ts
@@ -3,6 +3,7 @@ import {
   Controller,
   Get,
   Post,
+  Put,
   Request,
   UseGuards,
 } from '@nestjs/common';
@@ -11,6 +12,7 @@ import { ApiBearerAuth } from '@nestjs/swagger';
 import { AuthGuard } from '@nestjs/passport';
 import { AddToCartDto } from './dto/create-cart.dto';
 import type { AuthRequest } from '../auth/interfaces/auth-request.interface';
+import { RemoveFromCartDto } from './dto/remove-cart.dto';
 
 @ApiBearerAuth()
 @UseGuards(AuthGuard('jwt'))
@@ -22,6 +24,15 @@ export class CartController {
   addToCart(@Request() req: AuthRequest, @Body() addToCartDto: AddToCartDto) {
     const userId = req.user.userId;
     return this.cartService.addToCart(userId, addToCartDto);
+  }
+
+  @Put()
+  removeFromCart(
+    @Request() req: AuthRequest,
+    @Body() removeFromCartDto: RemoveFromCartDto,
+  ) {
+    const userId = req.user.userId;
+    return this.cartService.removeFromCart(userId, removeFromCartDto);
   }
 
   @Get()
