# backend/src/cart/dto/remove-cart.dto.ts
@@ -1,0 +1,3 @@
+import { AddToCartDto } from './create-cart.dto';
+
+export class RemoveFromCartDto extends AddToCartDto {}
